--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/jucora/Testing-Practice/issues"
   },
-  "homepage": "https://github.com/jucora/Testing-Practice#readme"
+  "homepage": "https://github.com/jucora/Testing-Practice#readme",
+  "devDependencies": {
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
+  }
 }
