fixin lint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,6 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "arrow-parens": "off"
-  }
+  },
+  "ignorePatterns": ["dist/", "build/"]
 }
