--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/jucora/Testing-Practice#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.10.2",
-    "eslint": "^7.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.17.2"
   }
 }
